<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_helppend"
            android:icon="@drawable/pending"
            android:title="@string/menu_helppendd" />
        <item
            android:id="@+id/nav_helpsolve"
            android:icon="@drawable/solve2"
            android:title="@string/menu_solve" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/account"
            android:title="@string/menu_tools" />
    </group>



</menu>
